Fix some css and take params out of the view

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -5,12 +5,14 @@ body {
 
 h1 {
 	font-family: 'Londrina Outline', cursive;
-	font-size: 100px;
+	font-size: 60px;
 	margin-left: 15%;
+	margin-bottom: 7%;
+	margin-top: 7%;
 }
 
-form {
+form, p {
 	margin-left: 15%;
 	font-family: 'Architects Daughter', cursive;
-	font-size: 35px;
+	font-size: 20px;
 }
